fixed client home alert wrap thing

--- a/blitz/staticfiles/css/sass/style.scss
+++ b/blitz/staticfiles/css/sass/style.scss
@@ -2185,7 +2185,7 @@ a:focus {
   color: white;
   padding: 10px;
   border-radius: 5px;
-  margin-left: 20px;
+  //margin-left: 20px;
   text-decoration: none;
   text-shadow: none;
   @include tablet-landscape-and-below {
